--- a/css/theme.css
+++ b/css/theme.css
@@ -361,40 +361,83 @@ section.has-light-background h6 {
  * TITLE SLIDE CUSTOM STYLES
  *********************************************/
 .title-slide {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     text-align: center;
+    position: relative;
+    height: 100%;
+    padding-top: 1.5em;
+    box-sizing: border-box;
+}
+
+.title-slide .discipline {
+    font-size: 0.72em;
+    color: #a3b1c6;
+    font-weight: 400;
+    font-style: italic;
+    margin-bottom: 0.3em;
+    margin-top: 1em;
+    letter-spacing: 0;
 }
 
 .title-slide h1 {
-    font-size: 1.8em;
+    font-size: 2em;
     font-weight: 700;
     color: #ffffff;
-    margin-bottom: 0.3em;
+    margin: 0 0 0.5em 0;
     letter-spacing: -0.02em;
+    line-height: 1.15;
 }
 
 .title-slide .lecture-number {
-    font-size: 1.0em;
+    font-size: 1.1em;
     color: var(--c-accent);
     font-weight: 500;
-    margin-top: 0.8em;
-    margin-bottom: 2.5em;
     font-style: italic;
 }
 
-.title-slide .slide-footer {
-    font-size: 0.5em;
-    color: #a3b1c6;
-    font-weight: 400;
-    line-height: 1.8;
-}
-
-.title-slide .slide-footer .lecturer {
+.title-slide .lecturers-card {
+    display: inline-block;
+    font-size: 0.58em;
     color: #d0d8e8;
-    font-weight: 600;
-    margin-bottom: 0.4em;
+    line-height: 1.9;
+    text-align: right;
+    align-self: flex-end;
+    margin-right: 2em;
+    margin-top: 6em;
 }
 
-.title-slide .slide-footer .department {
-    color: #6b7e9e;
-    font-size: 0.9em;
+.title-slide .lecturers-card .lecturers-label {
+    font-weight: 700;
+    margin-bottom: 0.15em;
+}
+
+.title-slide .lecturers-card .lecturer-name {
+    font-weight: 700;
+    display: block;
+}
+
+
+/*********************************************
+ * GLOBAL SLIDE FOOTER
+ *********************************************/
+.reveal .slide-footer-global {
+    position: fixed;
+    bottom: 1em;
+    left: 50%;
+    transform: translateX(-50%);
+    font-family: var(--r-main-font);
+    font-size: 0.5em;
+    color: rgba(163, 177, 198, 0.5);
+    font-weight: 400;
+    letter-spacing: 0.05em;
+    pointer-events: none;
+    z-index: 10;
+
+    display: flex;
+    justify-content: space-between;
+    gap: 10em;
+    width: 80%;
 }
